# drone_ai_sim

./: .gitignore  DEBUG_NO_DETECTIONS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_VERIFICATION.md  LIBRARY_LOADING_FIX.md  MEETING_TALKING_POINTS.md  NEXT_STEPS_VISION.md  OBJECT_DETECTION_SETUP.md  QOS_FIX.md  README.md  RESTART_INSTRUCTIONS.md  TOPIC_REMAPPING_FIX.md  VISION_SYSTEM_READY.md  check_topics.sh  diagnose_vision.sh  frames_2025-11-03_19.21.10.gv  preflight_check.sh  rtabmap_params.yaml  topics.txt  wsl.md
ares_interfaces/: CMakeLists.txt  package.xml
ares_interfaces/msg/: SensedObject.msg
ares_interfaces/srv/: DetectObjects.srv
drone_ai_sim_ros/: package.xml  setup.cfg  setup.py
drone_ai_sim_ros/drone_ai_sim_ros/: cmd_vel_bridge.py  cmd_vel_to_mavsdk.py  dynamic_tf_publisher.py  odom_tf_broadcaster.py  pointcloud_websocket_bridge.py  republish.py  trajectory_pub.py  yolo_perception_node.py
drone_ai_sim_ros/drone_ai_sim_ros_yolo/: README_POINTCLOUD_BRIDGE.md  odom_tf_broadcaster.py  pointcloud_websocket_bridge.py  republish.py  yolo_perception_node.py
drone_ai_sim_ros/launch/: orchestrate.launch.py  orchestrateH.launch.py
install/: local_setup.sh  setup.sh
log/: latest_build
nav2_config/: nav2_params.yaml  updated_navigation_launch.config.py
test/: odom_cov_bridge.py  odom_to_tf.py  orchestrate.py  orchestrate.sh  republish.py
test/gazebo_sim_agents/: agent_pilotDashboardIntegration.py  drone_bringup.launch.py
test/langgraph/: NAV2_INTEGRATION.md  README.md  SENSE_OBJECTS_REFERENCE.md  drone_service.py  edges.py  environment_settings.py  graph.py  mission_log.py  (+8 more)
world/: chair_human.sdf  depot.sdf  drone_modified.sdf  stereo_left.yaml  stereo_right.yaml  update_sdf.md  world_modified.sdf
(+64 files in other folders)
